fix footer overlap

--- a/dev/scss/app.scss
+++ b/dev/scss/app.scss
@@ -4,10 +4,22 @@ html{
 }
 
 body{
-    background-color: #f5f5f5;
-    
+  height: 100%;
+  background-color: #f5f5f5;
 }
 
+.wrapper {
+  min-height: 100%;
+  margin: 0 auto -142px; /* the bottom margin is the negative value of the footer's height */
+}
+
+.footer {
+  height: 142px; /* .push must be the same height as .footer */
+
+  .container{
+    z-index: -100;
+  }
+}
 
 .d-block{
   display: block;
@@ -305,9 +317,7 @@ select{
 }
 
 
-.footer {
-    height: 142px; /* .push must be the same height as .footer */
-}
+
 
 
 .box.comment:not(.tooltip) {
